WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
21587
NPN_PluginThreadAsyncCall does not work properly
https://bugs.webkit.org/show_bug.cgi?id=21587
Summary
NPN_PluginThreadAsyncCall does not work properly
Kenneth Russell
Reported
2008-10-14 01:42:53 PDT
An implementation bug causes NPN_PluginThreadAsyncCall to not call the callback in a timely fashion. Trivial patch attached which has been tested and verified.
Attachments
Patch fixing problem
(369 bytes, patch)
2008-10-14 01:44 PDT
,
Kenneth Russell
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kenneth Russell
Comment 1
2008-10-14 01:44:15 PDT
Created
attachment 24340
[details]
Patch fixing problem
Alexey Proskuryakov
Comment 2
2008-10-16 01:53:31 PDT
Comment on
attachment 24340
[details]
Patch fixing problem I assume this was meant for review, marking as such.
Anders Carlsson
Comment 3
2008-10-16 12:08:35 PDT
andersca2:WebCore andersca$ svn ci Sending WebCore/ChangeLog Sending WebCore/plugins/PluginMainThreadScheduler.cpp Transmitting file data .. Committed revision 37636.
Sam Weinig
Comment 4
2008-10-17 19:04:14 PDT
Comment on
attachment 24340
[details]
Patch fixing problem This was clearly reviewed by Anders.
John Ripley
Comment 5
2009-01-08 06:50:28 PST
***
Bug 21503
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug