2008-10-16  Kenneth Russell  <kenneth.russell@sun.com>

Reviewed and landed by Anders Carlsson.

        https://bugs.webkit.org/show_bug.cgi?id=21587
        NPN_PluginThreadAsyncCall does not work properly

        * plugins/PluginMainThreadScheduler.cpp:
        (WebCore::PluginMainThreadScheduler::dispatchCalls):
        Make sure to set m_callPending to false once the queue has been cleared.



Canonical link: https://commits.webkit.org/29874@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@37636 268f45cc-cd09-0410-ab3c-d52691b4dbfc